# lazy-importing

./: .gitignore  LICENSE  README.md  pyproject.toml
lazy_import/: __init__.py  __init__.pyi  _take1.py  _take1.pyi  _take2.py  _take3.py  _typed_lazyloader.py  recipes.py
lazy_importing/: __init__.py  __init__.pyi
tests/: recipes.py  test.py  test_basic.py  test_time.py
tests/dummy_pkg/: __init__.py  dummy1.py  dummy2.py  scratch.py  scratch1.py  scratch2.py
