[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy_importing"
description = "An attempt at a context manager for conditional lazy imports in Python."
requires-python = ">=3.8"
version = "2024.01.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" }]
classifiers = ["Development Status :: 1 - Planning"]

[tool.setuptools]
packages = ["lazy_importing"]

[tool.ruff]
include = ["lazy_importing"]
line-length = 120
target-version = "py38"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
    "NPY",
    "PD",
    "PYI",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.suppress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "PLR",     # Complexity things.
    "ANN101",  # Type of Self for self is implicit.
    "ANN102",  # Type of type[Self] for cls is implicit.
    "ANN204",  # Special method return types are known by type checkers.
    "A002",    # Some builtin names are shadowed, like globals and locals.
    # Recommended ignores by ruff when using ruff format.
    "COM812",
    "COM819",
    "E501",
    "ISC001",
    "Q003",
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]

[tool.ruff.extend-per-file-ignores]
"tests/*.*" = [
    "INP001", # Don't need a __init__.py.
    "T201",   # Printing is fine.
    "ANN",    # Don't need as many type annotations.
    "F401",   # Unused imports.
    "F841",   # Unused assigned variables.
]

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
include = ["lazy_importing"]
ignore = ["tests"]
pythonVersion = "3.8"
typeCheckingMode = "strict"

reportMissingTypeStubs = "warning"
reportImportCycles = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
